--- a/cli/package.json
+++ b/cli/package.json
@@ -42,7 +42,7 @@
 		"cli-progress": "^3.12.0",
 		"cmdt-shared": "workspace:cmdt-shared",
 		"commander": "^13.1.0",
-		"deepmerge": "^4.3.1",
+		"deepmerge-ts": "^7.1.5",
 		"iso8601-duration": "^2.1.2",
 		"jimp": "^1.6.0",
 		"json-diff-ts": "^4.2.0",
