--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -39,3 +39,22 @@ jobs:
           path: ./viewer/out
       - name: Deploy Pages Artifact
         uses: actions/deploy-pages@v4.0.5
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 9
+          run_install: false
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          always-auth: 'true'
+          node-version-file: '.nvmrc'
+          cache: 'pnpm'
+          cache-dependency-path: 'pnpm-lock.yaml'
+      - run: pnpm i
+      - run: pnpm test
