Do not package in PR

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -8,7 +8,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
@@ -32,20 +32,3 @@ jobs:
         run: pnpm lint
       - name: Format
         run: pnpm format
-      - name: Package
-        run: pnpm package
-      - name: Upload Artifacts (Mac)
-        uses: actions/upload-artifact@v4
-        with:
-          name: cmdt-macos
-          path: cli/bin/cmdt-macos
-      - name: Upload Artifacts (Linux)
-        uses: actions/upload-artifact@v4
-        with:
-          name: cmdt-linux
-          path: cli/bin/cmdt-linux
-      - name: Upload Artifacts (Win)
-        uses: actions/upload-artifact@v4
-        with:
-          name: cmdt-win
-          path: cli/bin/cmdt-win.exe
