--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -44,12 +44,6 @@ jobs:
       - run: pnpm i
       - name: Build Viewer
         run: pnpm run build
-      - name: Build Pages Artifact
-        uses: actions/upload-pages-artifact@v3.0.1
-        with:
-          path: ./viewer/out
-      - name: Deploy Pages Artifact
-        uses: actions/deploy-pages@v4.0.5
 
   test:
     runs-on: ubuntu-latest
@@ -68,6 +62,7 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: 'pnpm-lock.yaml'
       - run: pnpm i
+      - run: pnpm build
       - run: pnpm test
 
   release:
