--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -32,6 +32,9 @@ jobs:
       - name: Check Version
         id: check-version
         uses: EndBug/version-check@v2
+        with:
+          diff-search: true
+
       
   build:
     runs-on: ubuntu-latest
