--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -117,7 +117,7 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
-          custom_tag: ${{ steps.check-version.outputs.version }}
+          custom_tag: ${{ needs.check-version.outputs.version }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: ncipollo/release-action@v1
         with:
