--- a/cli/package.json
+++ b/cli/package.json
@@ -38,6 +38,7 @@
 		"@types/pngjs": "^6.0.5",
 		"@types/resemblejs": "^4.1.3",
 		"@types/xml2js": "^0.4.14",
+		"@vitest/coverage-v8": "^3.2.4",
 		"@yao-pkg/pkg": "^6.3.2",
 		"axios": "^1.8.3",
 		"cli-progress": "^3.12.0",
