--- a/cli/package.json
+++ b/cli/package.json
@@ -60,6 +60,7 @@
 		"vitest": "^3.1.1",
 		"winston": "^3.17.0",
 		"xml2js": "^0.6.2",
-		"zx": "^8.4.1"
+		"zx": "^8.4.1",
+		"fishery": "^2.3.1"
 	}
 }
